RESOLVED FIXED60398
REGRESSION(r81684): cox.com webmail sign in button is missing.
https://bugs.webkit.org/show_bug.cgi?id=60398
Summary REGRESSION(r81684): cox.com webmail sign in button is missing.
Dave Hyatt
Reported 2011-05-06 12:50:28 PDT
<rdar://problem/9307696> REGRESSION (r81684): cox.com sign in button is missing Go to webmail.cox.net and pick California as your state. The sign-in page is missing the Sign In button. This is because of a typo in the refactoring from r81684.
Attachments
Patch (27.12 KB, patch)
2011-05-06 12:53 PDT, Dave Hyatt
mitz: review+
Dave Hyatt
Comment 1 2011-05-06 12:53:02 PDT
Dave Hyatt
Comment 2 2011-05-06 13:07:48 PDT
Fixed in r85971.
Ademar Reis
Comment 3 2011-05-10 13:35:54 PDT
Revision r85971 cherry-picked into qtwebkit-2.2 with commit 35361c3 <http://gitorious.org/webkit/qtwebkit/commit/35361c3>
Note You need to log in before you can comment on or make changes to this bug.