https://bugs.webkit.org/show_bug.cgi?id=60398 (<rdar://problem/9307696>) REGRESSION (r81684?): cox.com sign in button is missing

Reviewed by Dan Bernstein.

Fix a typo in r81684 where the ascent was used in a comparison instead of boxHeight.
This restores the original behavior before the refactoring messed it up.

Source/WebCore:

Added fast/inline/nested-top-alignment.html

* rendering/InlineFlowBox.cpp:
(WebCore::InlineFlowBox::computeLogicalBoxHeights):

LayoutTests:

* fast/inline/nested-top-alignment.html: Added.
* platform/mac/fast/inline/nested-top-alignment-expected.png: Added.
* platform/mac/fast/inline/nested-top-alignment-expected.txt: Added.



Canonical link: https://commits.webkit.org/75652@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85971 268f45cc-cd09-0410-ab3c-d52691b4dbfc